# mini-raft-rs

./: Cargo.toml  README.md  rustc-ice-2025-04-22T20_28_11-352696.txt  rustc-ice-2025-04-22T20_28_11-352697.txt  rustc-ice-2025-04-22T20_29_29-353350.txt  rustc-ice-2025-04-22T20_29_29-353351.txt
.github/workflows/: general.yaml
src/: client.rs  cluster.rs  cluster_node.rs  domain.rs  errors.rs  lib.rs  main.rs  message.rs  naive_logging.rs  server.rs  state_machine.rs  timeout.rs
src/client/: actors.rs  error.rs  handle.rs  receiver.rs  request.rs
src/client/actors/: inbound.rs  outbound.rs
src/cluster_node/: error.rs
src/domain/: address.rs  listener.rs  node_id.rs
src/server/: actors.rs  cluster_connection.rs  handle.rs  log.rs  outgoing.rs  peer_list.rs  peers.rs  receiver.rs  request.rs  routines.rs  rpc.rs  send.rs  volatile_leader_state.rs
src/server/actors/: candidate.rs  client_request.rs  follower.rs  leader.rs  root.rs
src/server/routines/: base.rs  election.rs  heartbeat.rs  network.rs
src/server/rpc/: append_entries.rs  request_vote.rs
