[package]
name = "mini-raft-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
chrono = "0.4.40"
futures-util = "0.3.31"
rand = "0.9.1"
thiserror = "2.0.12"
tokio-util = "0.7.15"
uuid ={ version = "1.16", features = ["v4"] }

[dependencies.tokio]
version = "1.44"
default-features = false
features = ["full"]
